--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,9 +9,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+
     - name: make
       run: make
+
     - name: make check
       run: make check
+
     - name: make dist
       run: make dist
+
+    - name: make distcheck
+      run: make distcheck
